fixed small issue the nykta cutting off on small screens

--- a/CanasiSite/canasi-html/main.css
+++ b/CanasiSite/canasi-html/main.css
@@ -53,6 +53,10 @@ main {
 
 }
 
+#Nykta-quote {
+    padding-bottom: 30px;
+}
+
 #footer-name {
     margin-left: auto;
 }
